# sigil

./: BLOG_2026-04-28_credibility_fixes.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml  requirements-lock.txt  requirements.txt  sigil.py  sigil_audit_proxy.py  sigil_llm_adapter.py
docs/: 00_SIGIL_Pitch.md  01_SIGIL_Overview.md  02_SIGIL_Whitepaper.md  KNOWN_LIMITATIONS.md  index.html  report.md
sigil_papers/: 00_SIGIL_Pitch.md  01_SIGIL_Overview.md  02_SIGIL_Whitepaper.md
tests/: conftest.py  test_adversarial.py  test_architect.py  test_audit_chain.py  test_audit_proxy.py  test_audit_proxy_integration.py  test_code_theft_canaries.py  test_context_architect.py  test_cost_calculator.py  test_filelock.py  test_human_gate.py  test_input_normalizer.py  test_integrity_check.py  test_integrity_receipt.py  test_keyring.py  test_legal_exporter.py  test_llm_adapters.py  test_response_fingerprinter.py  test_runtime.py  test_sentinel.py  test_sigil_seal.py  test_token_estimator.py  test_tool_registry.py  test_uncertainty_gate.py  test_validator.py  test_vow.py  test_workflow_engine.py
